fix: fixed image distortion on download page

--- a/src/components/download/download.module.css
+++ b/src/components/download/download.module.css
@@ -31,6 +31,7 @@
 
 .imgContainer {
   height: 380px;
+  width: 100%;
   background: #3650a2;
   border-radius: 6px;
   overflow: hidden;
@@ -41,12 +42,10 @@
 
 .imgContainer .desktopImg,
 .imgContainer .phoneImg {
-  max-width: 100%;
-  width: auto;
-  height: auto;
-  max-height: 100%;
-  margin-top: 55px;
+  width: 436px;
+  height: 380px;
   z-index: 2;
+  margin-top: 15px;
 }
 .imgContainer .background {
   width: 500%;
@@ -154,6 +153,16 @@
   .header {
     font-size: 28px;
   }
+  .imgContainer {
+    height: 300px;
+  }
+  .imgContainer .desktopImg,
+  .imgContainer .phoneImg {
+    width: 321px;
+    height: 280px;
+    z-index: 2;
+    margin-top: 15px;
+  }
 }
 
 @media only screen and (max-width: 767px) {
@@ -199,6 +208,12 @@
   }
   .imgContainer {
     height: 250px;
+    width: 90%;
+  }
+  .imgContainer .desktopImg,
+  .imgContainer .phoneImg {
+    width: 286px;
+    height: 250px;
   }
 }
 
@@ -214,6 +229,12 @@
     margin-bottom: 25px;
   }
   .imgContainer {
-    height: 160px;
+    height: 200px;
+  }
+
+  .imgContainer .desktopImg,
+  .imgContainer .phoneImg {
+    width: 230px;
+    height: 200px;
   }
 }
